# AniStudio

./: .clang-format  .gitignore  .gitmodules  AniStudio.sln  CMakeLists.txt  LICENSE-COMMERCIAL.txt  README.md  build.bat  build.sh  build_editor.bat  build_editor.sh  build_plugins.bat  conanfile.py  conanfile.txt  install.bat  install.sh  installVS.bat  mingw  setup.py  top()  vcpkg.json.txt
AniStudio/: Ani.h  AniStudio.md  AniStudio.vcxproj  AniStudio.vcxproj.filters  App.cpp  BaseComponent.h  BaseSystem.h  CMakeLists.txt  DLLDefines.hpp  Engine.cpp  Events.cpp  Events.h  PluginManager.cpp  PluginManager.hpp  Timer.cpp  Timer.h  Types.h  TypesImpl.cpp  TypesManager.hpp  main.cpp  pch.cpp  pch.h
AniStudio/Core/: Ani.h  Ani.hpp
AniStudio/Debug/: AniStudio.exe.recipe  AniStudio.ilk  vc143.idb
AniStudio/Debug/AniStudio.tlog/: AniStudio.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
AniStudio/ECS/: CMakeLists.txt  ECS.h  ECS.hpp  ECS.md  createCompHeader.py
AniStudio/ECS/Base/: BaseComponent.h  BaseComponent.hpp  BaseSystem.h  BaseSystem.hpp  CompList.h  CompList.hpp  ComponentMetadata.hpp  Entity.hpp  EntityManager.cpp  EntityManager.h  EntityManager.hpp  Types.h  Types.hpp
AniStudio/ECS/Components/: FileComponent.hpp  components.h
AniStudio/ECS/Components/2DComponents/: 2DMeshComponent.h
AniStudio/ECS/Components/CanvasComponents/: BrushComponent.h  BrushComponent.hpp  CanvasComponent.hpp  CanvasComponents.h
AniStudio/ECS/Components/ImageComponents/: ImageComponent.hpp
AniStudio/ECS/Components/NodeComponents/: GraphComponent.hpp  NodeComponents.hpp
AniStudio/ECS/Components/NodeGraphComponents/: NodeComponent.hpp  NodeComponents.hpp
AniStudio/ECS/Components/RenderComponents/: CameraComponent.hpp  MeshComponent.hpp  RenderComponents.h
AniStudio/ECS/Components/SDCPPComponents/: BaseModelComponent.hpp  CFGComponent.hpp  ClipGComponent.hpp  ClipLComponent.hpp  ClipSkipComponent.hpp  ControlnetComponent.hpp  DiffusionModelComponent.hpp  EmbeddingComponent.hpp  EncoderComponent.hpp  EncoderComponents.hpp  EsrganComponent.hpp  GuidanceComponent.hpp  InferenceComponent.hpp  InputIdComponent.hpp  LatentComponent.hpp  LatentTransformComponent.hpp  LatentUpscaleComponent.hpp  LayerSkipComponent.hpp  LoraComponent.hpp  ModelComponents.hpp  PromptComponent.hpp  SDCPPComponents.h  SamplerComponent.hpp  T5XXLComponent.hpp  VaeComponent.hpp
AniStudio/ECS/Components/ThreeDComponents/: ThreeDComponents.h  ThreeDMeshComponent.hpp
AniStudio/ECS/Components/VideoComponents/: VideoComponent.hpp
AniStudio/ECS/Systems/: FileSystem.hpp  ImageSystem.hpp  MeshSystem.hpp  NodeSystem.hpp  NodegraphSystem.hpp  ProjectSystem.hpp  SDCPPTasks.hpp  SDcppSystem.hpp  UpscaleSystem.hpp  VideoSystem.hpp  systems.h
AniStudio/ECS/Systems/CanvasSystems/: CanvasSystem.hpp
AniStudio/ECS/Systems/NodeGraphSystems/: NodegraphSystem.hpp
AniStudio/Engine/: Engine.cpp  Engine.h  Engine.hpp  Engine.md  vk_helper.h  vulkanContext.cpp  vulkanContext.hpp
AniStudio/Events/: Events.cpp  Events.hpp  Events.md
AniStudio/Gui/: AllViews.h  BaseView.hpp  CanvasView.cpp  CanvasView.hpp  Control.hpp  ConvertView.cpp  ConvertView.hpp  DebugView.cpp  DebugView.hpp  DefaultNodes.hpp  DiffusionView.cpp  DiffusionView.hpp  GUI.h  GuiDiffusion.cpp  GuiDiffusion.hpp  GuiNodes.cpp  GuiNodes.hpp  GuiSettings.cpp  GuiSettings.hpp  Guis.h  ImageView.cpp  ImageView.hpp  LayerManager.cpp  LayerManager.hpp  MenuBar.cpp  MenuBar.hpp  MeshView.cpp  MeshView.hpp  NodeGraphView.cpp  NodeGraphView.hpp  NodeView.cpp  NodeView.hpp  PluginView.cpp  PluginView.hpp  ProjectView.hpp  QueueView.cpp  QueueView.hpp  SequencerView.cpp  SequencerView.hpp  SettingsView.cpp  (+19 more)
AniStudio/Gui/Base/: BaseView.hpp  ViewList.hpp  ViewManager.hpp
AniStudio/Gui/base/: BaseView.hpp  ViewList.hpp  ViewManager.cpp  ViewManager.hpp  ViewTypes.hpp
AniStudio/ImGui/: CMakeLists.txt
AniStudio/ImGui/backends/: imgui_impl_glfw.cpp
AniStudio/Plugins/: BasePlugin.cpp  BasePlugin.hpp  IPlugin.hpp  PluginAPI.hpp  PluginImGuiHelper.hpp  PluginInterface.cpp  PluginInterface.hpp  PluginLoader.hpp  PluginManager.cpp  PluginManager.hpp  PluginRegistry.cpp  PluginRegistry.hpp
AniStudio/Timer/: Timer.cpp  Timer.h  Timer.hpp
AniStudio/data/preferences/: paths.json
AniStudio/localization/: localization.h
AniStudio/shaders/: basic.frag
AniStudio/utils/: Callbacks.h  Constants.hpp  DynamicNode.hpp  FilePaths.hpp  GuiStyleHelpers.hpp  ImageManager.hpp  ImageUtils.cpp  ImageUtils.hpp  InferenceQueue.hpp  LayerManager.cpp  LayerManager.hpp  LoadedHeaps.cpp  LoadedHeaps.hpp  LoadedMedia.cpp  LoadedMedia.hpp  Metadata.hpp  MetadataUtils.hpp  NodeData.h  OpenGLUtils.hpp  PngMetadataUtils.hpp  SDcppUtils.hpp  Serialization.cpp  Serialization.hpp  ThreadPool.hpp  UISchema.cpp  UISchema.hpp  VideoUtils.hpp  Webhooks.cpp  Webhooks.hpp  WebsocketClient.cpp  WebsocketClient.hpp  ZepUtils.hpp  builders.cpp  builders.h  filepaths.cpp  filepaths.h  filepaths.hpp  json_workflow.hpp  node_utils.hpp  stb_image_wrapper.cpp  (+1 more)
AniStudio/utils/UISchema/: BoolWidgets.hpp  DoubleWidgets.hpp  FloatWidgets.hpp  IntWidgets.hpp  ObjectWidgets.hpp  StringArrayWidgets.hpp  StringWidgets.hpp  UISchemaUtils.hpp  Vec2Widgets.hpp  Vec4Widgets.hpp
AniStudio/vk/: CmakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_loader.cpp  vk_loader.h  vk_sampler.cpp  vk_sampler.h
AniStudio/vk_engine/: CMakeLists.txt  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_types.h
plugins/: CMakeLists.txt
plugins/CustomPlugin/: CMakeLists.txt
plugins/CustomPlugin/include/: CustomPlugin.hpp
plugins/CustomPlugin/src/: CustomPlugin.cpp
plugins/ExamplePlugin/: CMakeLists.txt  ExampleComponent.cpp  ExampleComponent.hpp  ExamplePlugin.cpp  ExamplePlugin.hpp  ExampleSystem.cpp  ExampleSystem.hpp  ExampleView.cpp  ExampleView.hpp  build.bat  build.sh
plugins/GpuMonitorPlugin/: CMakeLists.txt  GpuMonitorPlugin.cpp
plugins/SamplePlugin/: CMakeLists.txt  SamplePlugin.cpp
(+49 files in other folders)
